[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Actor/Enemy/Shield.gd" type="Script" id=1]
[ext_resource path="res://assets/Actor/Enemy/Shield.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8, 10.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 9 )

[sub_resource type="Animation" id=8]
resource_name = "IdleLeft"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "IdleRight"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "WalkLeft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "WalkRight"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 5 ]
}

[node name="Shield" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 1 )
debug = true

[node name="BulletBlocker" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletBlocker"]
position = Vector2( 0, -9.5 )
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 3 )
hframes = 4
vframes = 2
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleLeft = SubResource( 8 )
anims/IdleRight = SubResource( 9 )
anims/WalkLeft = SubResource( 6 )
anims/WalkRight = SubResource( 7 )

[node name="FloorDetectorL" type="RayCast2D" parent="."]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 8
collide_with_areas = true

[node name="FloorDetectorR" type="RayCast2D" parent="."]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 8
collide_with_areas = true

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="BulletBlocker" to="." method="_on_BulletBlocker_area_entered"]
[connection signal="body_entered" from="BulletBlocker" to="." method="_on_BulletBlocker_body_entered"]
